--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "test": "vitest",
     "coverage": "vitest run --coverage",
+    "cypress:open": "cypress open",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -24,6 +25,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-istanbul": "^0.32.4",
     "autoprefixer": "^10.4.14",
+    "cypress": "^12.16.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
