feat: add relevant scripts

--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
-    "cypress:open": "cypress open",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test:unit": "vitest",
+    "test:unit:coverage": "vitest run --coverage",
+    "test:e2e": "cypress run",
+    "build": "tsc && vite build"
   },
   "dependencies": {
     "classnames": "^2.3.2",
